src/test/julian/Parsing/SyntaxError/prog_6.jul
int x;

class C {

}

x = 5;
Console.println(x);